Fix icons on Safari publishpress/publishpress-future#783

--- a/src/assets/jsx/workflow-editor/css/custom.css
+++ b/src/assets/jsx/workflow-editor/css/custom.css
@@ -1,3 +1,7 @@
+.components-button svg {
+    height: 100%;
+}
+
 #wpfooter {
     display: none !important;
 }
